// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileInput accept 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      accept="image/*"
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: rgba(51, 51, 51, 0.06274509803921569);
  color: #444444;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput basic outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c4 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c4:hover {
  text-decoration: underline;
}

.c2 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2::-webkit-file-upload-button {
  cursor: pointer;
}

.c1 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c1 >circle,
.c1 >ellipse,
.c1 >line,
.c1 >path,
.c1 >polygon,
.c1 >polyline,
.c1 >rect {
  outline: none;
  box-shadow: none;
}

.c1 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c0 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    class="c2"
    name="file"
    type="file"
  />
  <div
    class="c3"
  >
    <span
      class="textRecipe_size_medium "
    >
      Drop file here or
    </span>
    <a
      class="c4"
      tabindex="-1"
    >
      browse
    </a>
  </div>
</div>
`;

exports[`FileInput border 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 6px #7D4CDB;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput custom theme input font size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: 16px;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput disabled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
  opacity: 0.3;
  cursor: default;
  text-decoration: none;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  opacity: 0.3;
  cursor: default;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    disabled=""
  >
    <input
      aria-invalid="false"
      class="c3"
      disabled=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        disabled=""
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput disabled with file selected 1`] = `
.c10 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c10 *[stroke*='#'],
.c10 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*='#'],
.c10 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c11 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  margin: 12px;
  opacity: 0.3;
  cursor: default;
  text-decoration: none;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  line-height: 0;
  padding: 12px;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus >circle,
.c9:focus >ellipse,
.c9:focus >line,
.c9:focus >path,
.c9:focus >polygon,
.c9:focus >polyline,
.c9:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus ::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) >circle,
.c9:focus:not(:focus-visible) >ellipse,
.c9:focus:not(:focus-visible) >line,
.c9:focus:not(:focus-visible) >path,
.c9:focus:not(:focus-visible) >polygon,
.c9:focus:not(:focus-visible) >polyline,
.c9:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  width: calc(100% - 24px);
  right: 24px;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5::-webkit-file-upload-button {
  cursor: pointer;
}

.c4 {
  cursor: pointer;
  position: relative;
  opacity: 0.3;
  cursor: default;
  outline: none;
  box-shadow: none;
}

.c4 >circle,
.c4 >ellipse,
.c4 >line,
.c4 >path,
.c4 >polygon,
.c4 >polyline,
.c4 >rect {
  outline: none;
  box-shadow: none;
}

.c4 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="textRecipe_size_medium"
        for="fileInput"
        id="grommet-fileInput__label"
        style="margin: 6px 12px 6px 12px;"
      >
        File input with max size
      </label>
      <div
        class="c2 "
      >
        <div
          class="c3 c4"
          disabled=""
        >
          <input
            aria-invalid="false"
            class="c5"
            disabled=""
            id="fileInput"
            name="fileInput"
            type="file"
          />
          <div
            class="c6"
          >
            <div
              class="c7"
            >
              <span
                class="textRecipe_size_medium_truncate_true "
                style="font-weight: 600;"
              >
                file-size-okay.csv
              </span>
            </div>
            <div
              class="c8"
            >
              <button
                aria-label="remove file-size-okay.csv"
                class="c9"
                disabled=""
                type="button"
              >
                <svg
                  aria-label="FormClose"
                  class="c10"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m7 7 10 10M7 17 17 7"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
              <a
                class="c11"
                disabled=""
                tabindex="-1"
              >
                browse
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FileInput margin 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput maxSize 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput messages 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        test browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop files here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple aggregateThreshold 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop files here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple max 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop files here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium "
        style="margin: 12px;"
      >
        Drop file here or
      </span>
      <a
        class="c5"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput should use theme icons 1`] = `
.c8 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c8 *[stroke*='#'],
.c8 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*='#'],
.c8 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c9 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 6px;
}

.c12 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  margin: 12px;
}

.c12:hover {
  text-decoration: underline;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c11:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
  width: calc(100% - 24px);
  right: 24px;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5::-webkit-file-upload-button {
  cursor: pointer;
}

.c4 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c4 >circle,
.c4 >ellipse,
.c4 >line,
.c4 >path,
.c4 >polygon,
.c4 >polyline,
.c4 >rect {
  outline: none;
  box-shadow: none;
}

.c4 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    width: 3px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="textRecipe_size_medium"
        for="fileInput"
        id="grommet-fileInput__label"
        style="margin: 6px 12px 6px 12px;"
      >
        File input with max size
      </label>
      <div
        class="c2 "
      >
        <div
          class="c3 c4"
        >
          <input
            aria-invalid="true"
            class="c5"
            id="fileInput"
            name="fileInput"
            type="file"
          />
          <div
            class="c6"
          >
            <div
              class="c7"
            >
              <svg
                aria-label="Error, file-size-error.csv exceeds 200.0 B limit."
                class="c8"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17v2m0-9v6m0-13L2 22h20L12 3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
              <div
                class="c9"
              />
              <span
                class="textRecipe_size_medium_truncate_true "
                style="font-weight: 600;"
              >
                file-size-error.csv
              </span>
            </div>
            <div
              class="c10"
            >
              <button
                aria-label="remove file-size-error.csv"
                class="c11"
                type="button"
              >
                <svg
                  aria-label="FormClose"
                  class="c8"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m7 7 10 10M7 17 17 7"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
              <a
                class="c12"
                tabindex="-1"
              >
                browse
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FileInput theme anchor margin and label gap 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 48px;
}

.c5:hover {
  text-decoration: underline;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <input
        aria-invalid="false"
        class="c3"
        name="file"
        type="file"
      />
      <div
        class="c4"
      >
        <span
          class="textRecipe_size_medium "
          style="margin: 12px;"
        >
          Drop file here or
        </span>
        <a
          class="c5"
          tabindex="-1"
        >
          browse
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
